SubBt/force-app/main/default/objects/Stripe_Settings__c/Stripe_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Stripe Settings</label>
</CustomObject>