SubBt/force-app/main/default/objects/Stripe_Settings__c/fields/Email_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Name__c</fullName>
    <label>EmailTemplate Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>