SubBt/force-app/main/default/objects/Stripe_Settings__c/fields/Stripe_Publishable_Live_Key__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Publishable_Live_Key__c</fullName>
    <label>Stripe Publishable Live Key</label>
    <length>200</length>
    <type>Text</type>
</CustomField>