SubBt/force-app/main/default/objects/Stripe_Settings__c/fields/Stripe_Secret_Test_Key__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Secret_Test_Key__c</fullName>
    <label>Stripe Secret Test Key</label>
    <length>200</length>
    <type>Text</type>
</CustomField>